align stretch fixed

--- a/portfolio-webpp/src/components/helper/ContactCard.scss
+++ b/portfolio-webpp/src/components/helper/ContactCard.scss
@@ -95,4 +95,10 @@
     align-items: center;
     row-gap: 2rem;
   }
+
+  .insights {
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+  }
 }
